K1J-1410: Enhance certificate creation with befattningsKoder conversion and fallback to befattningar (#278)